--- a/src/components/Grid/style.scss
+++ b/src/components/Grid/style.scss
@@ -1,13 +1,45 @@
-.react-grid-layout {
+#mapGrid {
   position: relative;
+  width: 100%;
+  height: 100%;
   background-color: transparent;
   background-image: linear-gradient(0deg, 
-  transparent 49%, rgba(0,0,0, .05) 44%, rgba(0,0,0, .05) 51%, transparent 52%, transparent 98%, rgba(0,0,0, .05) 99%, 
+  transparent 49%, rgba(0,0,0, .05) 50%, rgba(0,0,0, .05) 51%, transparent 52%, transparent 98%, rgba(0,0,0, .05) 99%, 
    rgba(0,0,0, .05) 100%), 
   linear-gradient(90deg, 
   transparent 49%, rgba(0,0,0, .05) 50%, rgba(0,0,0, .05) 51%, transparent 52%, transparent 98%, rgba(0,0,0, .05) 99%, 
    rgba(0,0,0, .05) 100%);
   height:100%;
   background-position-y: -1px;
-  background-size: 200px 200px;
+  background-size: 100px 100px;
+}
+
+.mapCoordsGrid {
+  z-index: -100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: smaller;
+  color: dimgrey;
+  text-align: left;
+  margin: 5px 7px;
+}
+
+.mapGrid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  background-color: transparent;
+  background-image: linear-gradient(0deg, 
+  transparent 49%, rgba(255,0,0, .1) 50%, rgba(255,0,0, .1) 51%, transparent 52%, transparent 98%, rgba(255,0,0, .1) 99%, 
+   rgba(255,0,0, .1) 100%), 
+  linear-gradient(90deg, 
+  transparent 49%, rgba(255,0,0, .1) 50%, rgba(255,0,0, .1) 51%, transparent 52%, transparent 98%, rgba(255,0,0, .1) 99%, 
+   rgba(255,0,0, .1) 100%);
+   height:100%;
+   background-position-y: -1px;
+   background-size: 200px 200px;
 }
