--- a/src/components/Grid/style.scss
+++ b/src/components/Grid/style.scss
@@ -4,11 +4,11 @@
   height: 100%;
   background-color: transparent;
   background-image: linear-gradient(0deg, 
-  transparent 49%, rgba(0,0,0, .05) 50%, rgba(0,0,0, .05) 51%, transparent 52%, transparent 98%, rgba(0,0,0, .05) 99%, 
-   rgba(0,0,0, .05) 100%), 
+  transparent 49%, rgba(190,0,240, .07) 50%, rgba(190,0,240, .07) 51%, transparent 52%, transparent 98%, rgba(190,0,240, .07) 99%, 
+   rgba(190,0,240, .07) 100%), 
   linear-gradient(90deg, 
-  transparent 49%, rgba(0,0,0, .05) 50%, rgba(0,0,0, .05) 51%, transparent 52%, transparent 98%, rgba(0,0,0, .05) 99%, 
-   rgba(0,0,0, .05) 100%);
+  transparent 49%, rgba(190,0,240, .07) 50%, rgba(190,0,240, .07) 51%, transparent 52%, transparent 98%, rgba(190,0,240, .07) 99%, 
+   rgba(190,0,240, .07) 100%);
   height:100%;
   background-position-y: -1px;
   background-size: 100px 100px;
@@ -19,27 +19,29 @@
   position: absolute;
   top: 0;
   left: 0;
-  font-size: smaller;
-  color: dimgrey;
+  font-size: small;
+  color: #aaa;
   text-align: left;
   margin: 5px 7px;
+  font-family: monospace;
 }
 
 .mapGrid {
+  $gridPos: 100;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   height: 100%;
-  background-color: transparent;
-  background-image: linear-gradient(0deg, 
-  transparent 49%, rgba(255,0,0, .1) 50%, rgba(255,0,0, .1) 51%, transparent 52%, transparent 98%, rgba(255,0,0, .1) 99%, 
-   rgba(255,0,0, .1) 100%), 
-  linear-gradient(90deg, 
-  transparent 49%, rgba(255,0,0, .1) 50%, rgba(255,0,0, .1) 51%, transparent 52%, transparent 98%, rgba(255,0,0, .1) 99%, 
-   rgba(255,0,0, .1) 100%);
-   height:100%;
-   background-position-y: -1px;
-   background-size: 200px 200px;
+  background-image: linear-gradient(45deg, rgba(155,155,155,0.07) 25%, transparent 25%), linear-gradient(-45deg, rgba(155,155,155,0.07) 25%, transparent 25%), linear-gradient(45deg, transparent 75%, rgba(155,155,155,0.07) 75%), linear-gradient(-45deg, transparent 75%, rgba(155,155,155,0.07) 75%);
+  background-size: ($gridPos * 2px) $gridPos * 2px;
+  background-position: 0 0, 0 $gridPos * 1px, $gridPos * 1px $gridPos * -1px, $gridPos * -1px 0px;
+  // background-color: transparent;
+  // background-image: linear-gradient(to right, rgba(255,0,0, .1) 0,rgba(255,0,0, .1) 49%, transparent 50%, transparent 100%), 
+  // linear-gradient(to bottom, 
+  // transparent 0, transparent 49%, rgba(255,0,0, .1) 50%, rgba(255,0,0, .1) 100%);
+  //  height:100%;
+  //  background-position-y: 0;
+  //  background-size: 200px 200px;
 }
