--- a/src/components/Grid/style.scss
+++ b/src/components/Grid/style.scss
@@ -2,6 +2,26 @@
   position: relative;
   width: 100%;
   height: 100%;
+  // background: transparent;
+  $gridPos: 100;
+  background-image: linear-gradient(45deg, rgba(155,155,155,0.07) 25%, transparent 25%), linear-gradient(-45deg, rgba(155,155,155,0.07) 25%, transparent 25%), linear-gradient(45deg, transparent 75%, rgba(155,155,155,0.07) 75%), linear-gradient(-45deg, transparent 75%, rgba(155,155,155,0.07) 75%);
+  background-size: ($gridPos * 2px) $gridPos * 2px;
+  background-position: 0 0, 0 $gridPos * 1px, $gridPos * 1px $gridPos * -1px, $gridPos * -1px 0px;
+}
+
+.mapCoordsGrid {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 3px 5px;
+  margin: 0;
+  font-size: small;
+  color: #aaa;
+  text-align: left;
+  font-family: monospace;
   background-color: transparent;
   background-image: linear-gradient(0deg, 
   transparent 49%, rgba(190,0,240, .07) 50%, rgba(190,0,240, .07) 51%, transparent 52%, transparent 98%, rgba(190,0,240, .07) 99%, 
@@ -14,36 +34,9 @@
   background-size: 100px 100px;
 }
 
-.mapCoordsGrid {
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  font-size: small;
-  color: #aaa;
-  text-align: left;
-  margin: 5px 7px;
-  font-family: monospace;
-}
-
 .mapGrid {
-  $gridPos: 100;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   height: 100%;
-  background-image: linear-gradient(45deg, rgba(155,155,155,0.07) 25%, transparent 25%), linear-gradient(-45deg, rgba(155,155,155,0.07) 25%, transparent 25%), linear-gradient(45deg, transparent 75%, rgba(155,155,155,0.07) 75%), linear-gradient(-45deg, transparent 75%, rgba(155,155,155,0.07) 75%);
-  background-size: ($gridPos * 2px) $gridPos * 2px;
-  background-position: 0 0, 0 $gridPos * 1px, $gridPos * 1px $gridPos * -1px, $gridPos * -1px 0px;
-  // background-color: transparent;
-  // background-image: linear-gradient(to right, rgba(255,0,0, .1) 0,rgba(255,0,0, .1) 49%, transparent 50%, transparent 100%), 
-  // linear-gradient(to bottom, 
-  // transparent 0, transparent 49%, rgba(255,0,0, .1) 50%, rgba(255,0,0, .1) 100%);
-  //  height:100%;
-  //  background-position-y: 0;
-  //  background-size: 200px 200px;
+  max-height: 100%;
+  max-width: 1000px;
+  overflow: hidden;
 }
