--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #c1bfb5;
+  background: -webkit-linear-gradient(140deg, #c1bfb5 70.8%, #707078 70.8%);
+  background: -o-linear-gradient(140deg, #c1bfb5 70.8%, #707078 70.8%);
+  background: -moz-linear-gradient(140deg, #c1bfb5 70.8%, #707078 70.8%);
+  background: linear-gradient(140deg, #c1bfb5 70.8%, #707078 70.8%);
+  height: 100vh;
 }
 
 .App {
