--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,23 @@
        /* Safari, Android, iOS */
        /* url('webfont.svg#svgFontName') format('svg'); Legacy iOS */
 }
+
+@font-face {
+  font-family: 'Ferrum';
+  src:  local('Ferrum'), url('./fonts/Ferrum-wy99.otf')  format('opentype');
+  /* url('webfont.eot'); IE9 Compat Modes */
+  /* src: url('webfont.eot?#iefix') format('embedded-opentype'), IE6-IE8 */
+       /* url('webfont.woff') format('woff'), Modern Browsers */
+       /* Safari, Android, iOS */
+       /* url('webfont.svg#svgFontName') format('svg'); Legacy iOS */
+}
+
+@font-face {
+  font-family: 'SpaceAndAstronomy';
+  src:  local('SpaceAndAstronomy'), url('./fonts/SpaceAndAstronomy-pZRD.ttf')  format('truetype');
+  /* url('webfont.eot'); IE9 Compat Modes */
+  /* src: url('webfont.eot?#iefix') format('embedded-opentype'), IE6-IE8 */
+       /* url('webfont.woff') format('woff'), Modern Browsers */
+       /* Safari, Android, iOS */
+       /* url('webfont.svg#svgFontName') format('svg'); Legacy iOS */
+}
