--- a/src/components/Grid/style.scss
+++ b/src/components/Grid/style.scss
@@ -22,7 +22,7 @@
   color: #aaa;
   text-align: left;
   font-family: monospace;
-  background-color: transparent;
+  background-color: white;
   background-image: linear-gradient(0deg, 
   transparent 49%, rgba(190,0,240, .07) 50%, rgba(190,0,240, .07) 51%, transparent 52%, transparent 98%, rgba(190,0,240, .07) 99%, 
    rgba(190,0,240, .07) 100%), 
