--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   background: -o-linear-gradient(140deg, #c1bfb5 70.8%, #707078 70.8%);
   background: -moz-linear-gradient(140deg, #c1bfb5 70.8%, #707078 70.8%);
   background: linear-gradient(140deg, #c1bfb5 70.8%, #707078 70.8%);
+  background-repeat:no-repeat;
   height: 100vh;
 }
 
