--- a/src/components/Grid/style.scss
+++ b/src/components/Grid/style.scss
@@ -1,8 +1,10 @@
+// body { background-color: pink; }
+
 #mapGrid {
   position: relative;
   width: 100%;
   height: 100%;
-  // background: transparent;
+  background: transparent;
   $gridPos: 100;
   background-image: linear-gradient(45deg, rgba(155,155,155,0.07) 25%, transparent 25%), linear-gradient(-45deg, rgba(155,155,155,0.07) 25%, transparent 25%), linear-gradient(45deg, transparent 75%, rgba(155,155,155,0.07) 75%), linear-gradient(-45deg, transparent 75%, rgba(155,155,155,0.07) 75%);
   background-size: ($gridPos * 2px) $gridPos * 2px;
@@ -22,7 +24,7 @@
   color: #aaa;
   text-align: left;
   font-family: monospace;
-  background-color: transparent;
+  background-color: white;
   background-image: linear-gradient(0deg, 
   transparent 49%, rgba(190,0,240, .07) 50%, rgba(190,0,240, .07) 51%, transparent 52%, transparent 98%, rgba(190,0,240, .07) 99%, 
    rgba(190,0,240, .07) 100%), 
@@ -35,6 +37,7 @@
 }
 
 .mapGrid {
+  z-index: 10;
   height: 100%;
   max-height: 100%;
   max-width: 1000px;
