--- a/src/components/Grid/style.scss
+++ b/src/components/Grid/style.scss
@@ -11,6 +11,16 @@
   background-position: 0 0, 0 $gridPos * 1px, $gridPos * 1px $gridPos * -1px, $gridPos * -1px 0px;
 }
 
+#mapGridViewMode {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: white;
+  $gridPos: 100;
+  background-size: ($gridPos * 2px) $gridPos * 2px;
+  background-position: 0 0, 0 $gridPos * 1px, $gridPos * 1px $gridPos * -1px, $gridPos * -1px 0px;
+}
+
 .mapCoordsGrid {
   z-index: -1;
   position: absolute;
